--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,10 @@ jobs:
       - name: Config SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_rsa
+          # Création du fichier de clé privée avec retour à la ligne exact
+          cat <<EOF > ~/.ssh/id_rsa
+${{ secrets.VPS_SSH_KEY }}
+EOF
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
